wip v2.165.0: conf gate and wiring gate for the shaping